crates/stackable-versioned-macros/tests/default/fail/changed.stderr
error: the previous field name must not start with the deprecation prefix
  --> tests/default/fail/changed.rs:11:52
   |
11 |             changed(since = "v1beta1", from_name = "deprecated_bar"),
   |                                                    ^^^^^^^^^^^^^^^^

error: field was marked as `changed`, but both `from_name` and `from_type` are unset
  --> tests/default/fail/changed.rs:14:9
   |
14 |         bar: usize,
   |         ^^^
